test/corpus/gcode_blocks.txt
================================================================================
gcode block: plain G-code with parameters
================================================================================

[gcode_macro TEST]
gcode:
    G1 X10 Y20 F3000
    M104 S0

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))))))

================================================================================
gcode block: mixed Jinja if/endif with G-code inside
================================================================================

[gcode_macro TEST]
gcode:
    {% if printer.extruder.can_extrude %}
    M104 S210
    {% else %}
    M104 S0
    {% endif %}

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            (jinja_tag
              (jinja_content
                (jinja_keyword)
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)))))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))
        (gcode_line
          (gcode_line_content
            (jinja_tag
              (jinja_content
                (jinja_keyword)))))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))
        (gcode_line
          (gcode_line_content
            (jinja_tag
              (jinja_content
                (jinja_keyword)))))))))

================================================================================
gcode block: {{ variable }} interpolation in a G-code parameter
================================================================================

[gcode_macro TEST]
gcode:
    G1 X{{ printer.toolhead.position.x }} F3000

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (jinja_expression
              (jinja_content
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)))
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))))))

================================================================================
gcode block: {# jinja #} comment
================================================================================

[gcode_macro TEST]
gcode:
    G28
    {# this is a jinja comment #}
    M104 S0

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)))
        (gcode_line
          (gcode_line_content
            (jinja_comment)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))))))

================================================================================
gcode block: # text comment and ; text comment inside body
================================================================================

[gcode_macro TEST]
gcode:
    # hash comment line
    G1 X10
    ; semi comment line

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            (gcode_line_comment)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))
        (gcode_line
          (gcode_line_content
            (gcode_line_comment)))))))

================================================================================
gcode block: multi-line continuation with blank lines and trailing newline
================================================================================

[gcode_macro TEST]
gcode:
    G28

    G1 X10 Y20

    M104 S0

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))))))

================================================================================
gcode block: Klipper extended commands with KEY=value parameters
================================================================================

[gcode_macro TEST]
gcode:
    SET_FAN_SPEED SPEED=1.0
    RESPOND MSG="hello"
    M118 Hello world

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_identifier)
            (gcode_identifier)))))))

================================================================================
gcode block: same-line first-line value plus indented body
================================================================================

[gcode_macro TEST]
gcode: M104 S0
    G28
    G1 X10

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        first_line: (gcode_line_content
          command: (gcode_command_name)
          (gcode_text)
          (gcode_parameter)
          (gcode_number))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))))))

================================================================================
gcode block: empty gcode: with no body
================================================================================

[gcode_macro TEST]
gcode:

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)))))

================================================================================
gcode block: inline {action_raise_error(...)} call
================================================================================

[gcode_macro TEST]
gcode:
    {action_raise_error("parking failed")}
    {action_respond_info('hello')}

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            (klipper_action
              name: (klipper_action_name)
              (jinja_string))))
        (gcode_line
          (gcode_line_content
            (klipper_action
              name: (klipper_action_name)
              (jinja_string))))))))

================================================================================
gcode block: keywords are not matched inside identifiers
================================================================================

[gcode_macro TEST]
gcode:
    {{ printer.int_value }}{{ settings.x }}{% if cond.set %}
    {% set x = 1 %}

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            (jinja_expression
              (jinja_content
                (jinja_variable)
                (jinja_operator)
                (jinja_builtin)
                (jinja_variable)))
            (jinja_expression
              (jinja_content
                (jinja_keyword)
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)))
            (jinja_tag
              (jinja_content
                (jinja_keyword)
                (jinja_variable)
                (jinja_operator)
                (jinja_keyword)))))
        (gcode_line
          (gcode_line_content
            (jinja_tag
              (jinja_content
                (jinja_keyword)
                (jinja_variable)
                (jinja_operator)
                (jinja_number)))))))))

================================================================================
gcode block: jinja brackets split from operators
================================================================================

[gcode_macro TEST]
gcode:
    {{ a + b * (c - d) }}
    {{ printer.cfg["k"].x }}

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            (jinja_expression
              (jinja_content
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)
                (jinja_operator)
                (jinja_bracket)
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)
                (jinja_bracket)))))
        (gcode_line
          (gcode_line_content
            (jinja_expression
              (jinja_content
                (jinja_variable)
                (jinja_operator)
                (jinja_variable)
                (jinja_bracket)
                (jinja_string)
                (jinja_bracket)
                (jinja_operator)
                (jinja_variable)))))))))

================================================================================
gcode block: bare jinja interpolation in G-code parameters
================================================================================

[gcode_macro TEST]
gcode:
    G1 X{W_position} F30000
    G1 X{extruder1} F{feedrate|default(3000)|int}

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (jinja_bare_expression
              (jinja_content
                (jinja_variable)))
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (jinja_bare_expression
              (jinja_content
                (jinja_variable)))
            (gcode_text)
            (gcode_parameter)
            (jinja_bare_expression
              (jinja_content
                (jinja_variable)
                (jinja_operator)
                (jinja_builtin)
                (jinja_bracket)
                (jinja_number)
                (jinja_bracket)
                (jinja_operator)
                (jinja_builtin)))))))))

================================================================================
gcode block: lowercase identifiers as argument values
================================================================================

[gcode_macro TEST]
gcode:
    SET_GCODE_VARIABLE MACRO=_IDEX_VARIABLES VARIABLE=active_tool VALUE=1
    SET_VAR NAME=my_name VALUE=extruder1

--------------------------------------------------------------------------------

(source_file
  (section
    (section_type)
    (section_name)
    (section_item
      (gcode_block
        (setting_separator)
        (gcode_line
          (gcode_line_content
            (gcode_command_name)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)))
        (gcode_line
          (gcode_line_content
            (gcode_command_name)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)))))))

================================================================================
gcode block: jinja builtin filters and tests
================================================================================

[gcode_macro TEST]
gcode:
    {{ x|default(0)|int }}
    {% if x is none %}...{% endif %}

--------------------------------------------------------------------------------

(source_file
  (section
    (section_type)
    (section_name)
    (section_item
      (gcode_block
        (setting_separator)
        (gcode_line
          (gcode_line_content
            (jinja_expression
              (jinja_content
                (jinja_variable)
                (jinja_operator)
                (jinja_builtin)
                (jinja_bracket)
                (jinja_number)
                (jinja_bracket)
                (jinja_operator)
                (jinja_builtin)))))
        (gcode_line
          (gcode_line_content
            (jinja_tag
              (jinja_content
                (jinja_keyword)
                (jinja_variable)
                (jinja_keyword)
                (jinja_builtin)))
            (gcode_text)))))))

================================================================================
gcode block: gcode parameter letter and value are separate tokens
================================================================================

[gcode_macro TEST]
gcode:
    G92 E0 F3000 X10.5

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)
            (gcode_text)
            (gcode_parameter)
            (gcode_number)))))))

================================================================================
gcode block: klipper extended command name vs arg name vs arg value
================================================================================

[gcode_macro TEST]
gcode:
    SAVE_GCODE_STATE NAME=pause_gs RESPOND MSG="hello"

--------------------------------------------------------------------------------

(source_file
  (section
    type: (section_type)
    name: (section_name)
    (section_item
      (gcode_block
        separator: (setting_separator)
        (gcode_line
          (gcode_line_content
            command: (gcode_command_name)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)
            (gcode_text)
            (gcode_command)
            (gcode_text)
            (gcode_command)
            (gcode_arg_value)))))))
